refactor to hex and fine tune dependencies code.